--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -62,5 +62,15 @@
             android:id="@+id/button_hide" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="246dp" android:layout_marginStart="246dp" android:onClick="hideButton"/>
+    <TextView
+            android:text="Text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" tools:layout_editor_absoluteY="163dp"
+            tools:layout_editor_absoluteX="176dp" android:id="@+id/sameId"/>
+    <TextView
+            android:text="Text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" tools:layout_editor_absoluteY="162dp"
+            tools:layout_editor_absoluteX="246dp" android:id="@+id/sameId"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
