--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -7,74 +7,77 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity" android:id="@+id/parent_layout">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/text_hello"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:id="@+id/message_text"
-            app:layout_constraintVertical_bias="0.169"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button_change_text"
             android:onClick="changeText" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
-            android:text="@string/button_change_text"/>
+            android:layout_marginTop="24dp"
+            android:text="@string/button_change_text" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
     <Button
             android:text="@string/button_remove_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button_remove_text" android:onClick="removeText"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="133dp"
-            android:layout_marginStart="133dp"/>
+            app:layout_constraintStart_toEndOf="@+id/button_change_text" android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"/>
     <CheckBox
             android:text="CheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/checkbox_empty"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="87dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button_change_text"/>
     <CheckBox
             android:text="CheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/checkbox_mark"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="132dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"
-            android:layout_marginStart="28dp" android:checked="true"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" android:checked="true" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/checkbox_empty"/>
     <Button
             android:text="Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button_disabled" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="183dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:enabled="false"/>
+            android:id="@+id/button_disabled"
+            android:enabled="false" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/checkbox_mark" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
     <Button
             android:text="Hide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button_hide" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="246dp" android:layout_marginStart="246dp" android:onClick="hideButton"/>
+            android:id="@+id/button_hide"
+            android:onClick="hideButton"
+            app:layout_constraintStart_toEndOf="@+id/button_remove_text" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
     <TextView
             android:text="Text1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/sameId1" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="163dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="176dp" android:layout_marginStart="176dp"/>
+            android:id="@+id/sameId1"
+            app:layout_constraintStart_toEndOf="@+id/button_disabled"
+            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
+            android:layout_marginTop="172dp" app:layout_constraintTop_toTopOf="parent"/>
     <TextView
             android:text="Text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/sameId2" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="162dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="246dp" android:layout_marginStart="246dp"/>
+            android:layout_marginTop="172dp"
+            app:layout_constraintStart_toEndOf="@+id/sameId1" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:text="@string/text_hello"
+            android:id="@+id/message_text"
+            app:layout_constraintStart_toEndOf="@+id/checkbox_empty"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/button_remove_text"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
