--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -80,4 +80,16 @@
             android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/button_remove_text"/>
 
+    <EditText
+            android:id="@+id/editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="110dp"
+            android:layout_marginEnd="45dp"
+            android:layout_marginRight="45dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
